search api updated